lib_LTLIBRARIES = libstomp.la
libstomp_la_SOURCES = \
                     Exchange.cpp \
                     Exchange_Fanout.cpp \
                     Exchange_Topic.cpp \
                     ExchangeManager.cpp \
                     Stomp.cpp \
                     StompClient.cpp \
                     StompFrame.cpp \
                     StompHeader.cpp \
                     StompHeaders.cpp \
                     StompMessage.cpp \
                     StompParser.cpp \
                     StompPeer.cpp \
                     StompServer.cpp \
                     StompStats.cpp \
                     Subscription.cpp \
                     Transaction.cpp \
                     TransactionManager.cpp
