bin_PROGRAMS = parsertest parsernul feedtest servtest pushtest nacktest stomptest
parsertest_SOURCES = parsertest.cpp
parsertest_LDFLAGS = -lopenframe -lstomp

servtest_SOURCES = servtest.cpp
servtest_LDFLAGS = -lopenframe -lstomp

parsernul_SOURCES = parsernul.cpp
parsernul_LDFLAGS = -lopenframe -lstomp

feedtest_SOURCES = Feed.cpp feedtest.cpp
feedtest_LDFLAGS = -lopenframe -lstomp

nacktest_SOURCES = Feed.cpp nacktest.cpp
nacktest_LDFLAGS = -lopenframe -lstomp

pushtest_SOURCES = Push.cpp pushtest.cpp
pushtest_LDFLAGS = -lopenframe -lstomp

stomptest_SOURCES = stomptest.cpp
stomptest_LDFLAGS = -lopenframe -lstomp
